<resources>
    <string name="app_name">EAInterviewTask</string>
    <string name="cars_machinery"><![CDATA[Cars & Machinery]]></string>
    <string name="scroll_down_to_search">Scroll down to Search</string>
    <string name="loading">Loading...</string>
    <string name="lot">Lot #</string>
    <string name="bids">Bids</string>
    <string name="time_left">Time Left</string>
    <string name="aed">AED</string>
    <string name="no_data">No Data to Show!</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="grid_view">Grid View</string>
    <string name="sort_by">Sort by</string>
    <string name="end_date">End Date</string>
    <string name="price">Price</string>
    <string name="year">Model Year</string>
    <string name="done">Done</string>
</resources>
