<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="112.5dp"
            android:paddingTop="20dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:src="@drawable/back" />
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="5"
                android:gravity="center_horizontal"
                android:text="@string/cars_machinery"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonLanguage"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="EN"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <TextView
                    android:id="@+id/textViewCounter"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:padding="4dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/scroll_down_to_search" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewLoading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/loading"
                    android:textSize="20sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerViewCarsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </FrameLayout>
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/layout_view_bar"/>

</FrameLayout>