<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="3dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/linearLayoutItemCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="120dp">

        <FrameLayout
            android:layout_width="140dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewItemCar"
                android:layout_width="140dp"
                android:layout_height="match_parent" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_margin="8dp"
                android:background="@color/gray_bg" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:layout_marginBottom="4dp"
                android:id="@+id/textViewItemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Car Title"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">

                <TextView
                    android:id="@+id/textViewItemPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Price"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewCurrency"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:paddingEnd="4dp"
                    android:paddingStart="4dp"
                    android:text="@string/aed"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/lot"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/bids"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/time_left"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewItemLot"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/textViewItemBids"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/textViewItemTimeLeft"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@android:color/black" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>